remove mailto for spam prevention

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ img_dir: "/assets/img/"
 large_pic: "/assets/img/drew.jpg"
 contact:
   twitter: "drewSaysGoVeg"
-  email: "literallydrew@drewrwilson.com"
+  email: "literallydrew - at - drewrwilson.com"
   github: "drewrwilson"
   phone:
   fax:
